--- a/ch7/src/main/resources/application.properties
+++ b/ch7/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-server.port=9090
+server.port = 8443
 logging.level.org.springframework.web = DEBUG
+server.ssl.key-store = .keystore
+server.ssl.key-store-password = 123456
+server.ssl.keyStoreType = JKS
+server.ssl.keyAlias: tomcat
