--- a/ch7_6/pom.xml
+++ b/ch7_6/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>cn.txx</groupId>
-	<artifactId>ch7</artifactId>
+	<artifactId>ch7_6</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ch7</name>
+	<name>ch7_6</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -25,20 +25,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<!--<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-tomcat</artifactId>
-				</exclusion>
-			</exclusions>-->
+			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
-
-		<!--<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jetty</artifactId>
-			<version>2.1.6.RELEASE</version>
-		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
