--- a/ch8_3/src/main/resources/application.properties
+++ b/ch8_3/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=root
 
+#1
+spring.jpa.hibernate.ddl-auto=update
+#2
+spring.jpa.show-sql=true
+
+spring.jackson.serialization.indent_output=true
+
+#spring.data.rest.base-path= /api
+
+debug=true
