--- a/ch9_2_spring-batch/src/main/resources/application.properties
+++ b/ch9_2_spring-batch/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database=MYSQL
+
+spring.main.allow-bean-definition-overriding=true
+
+
+spring.batch.job.enabled=false
+
+logging.level.org.springframework.web = DEBUG
+
+
 
