--- a/ch9_1/src/main/resources/application.properties
+++ b/ch9_1/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.datasource.url=jdbc:mysql://47.102.157.88:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.redis.database=0
+spring.redis.host=192.168.1.115
+#47.102.157,88
 #2
-
-
 logging.level.org.springframework.security=INFO
 spring.thymeleaf.cache=false
 spring.jpa.hibernate.ddl-auto=update
